@@ -1,15 +1,56 @@
 package datawave.query.iterator;
 
+import static com.google.common.base.Preconditions.checkNotNull;
+import static org.apache.commons.pool.impl.GenericObjectPool.WHEN_EXHAUSTED_BLOCK;
+
+import java.io.IOException;
+import java.io.InterruptedIOException;
+import java.net.MalformedURLException;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.HashMap;
+import java.util.Iterator;
+import java.util.List;
+import java.util.Map;
+import java.util.Map.Entry;
+import java.util.Set;
+
+import javax.annotation.Nullable;
+
+import org.apache.accumulo.core.data.ByteSequence;
+import org.apache.accumulo.core.data.Key;
+import org.apache.accumulo.core.data.Range;
+import org.apache.accumulo.core.data.Value;
+import org.apache.accumulo.core.iterators.IteratorEnvironment;
+import org.apache.accumulo.core.iterators.SortedKeyValueIterator;
+import org.apache.accumulo.core.iterators.YieldCallback;
+import org.apache.accumulo.core.iterators.YieldingKeyValueIterator;
+import org.apache.accumulo.core.iteratorsImpl.system.IterationInterruptedException;
+import org.apache.accumulo.tserver.tablet.TabletClosedException;
+import org.apache.commons.collections4.iterators.EmptyIterator;
+import org.apache.commons.jexl2.JexlArithmetic;
+import org.apache.commons.jexl2.parser.ASTJexlScript;
+import org.apache.commons.jexl2.parser.JexlNode;
+import org.apache.commons.lang.builder.CompareToBuilder;
+import org.apache.commons.pool.BasePoolableObjectFactory;
+import org.apache.commons.pool.impl.GenericObjectPool;
+import org.apache.hadoop.fs.FileSystem;
+import org.apache.hadoop.fs.Path;
+import org.apache.hadoop.io.Text;
+import org.apache.log4j.Logger;
+import org.apache.zookeeper.server.quorum.QuorumPeerConfig.ConfigException;
+
 import com.google.common.base.Function;
 import com.google.common.base.Preconditions;
 import com.google.common.base.Predicate;
-import com.google.common.base.Throwables;
 import com.google.common.collect.Iterators;
-import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
 import com.google.common.collect.Multimap;
 import com.google.common.collect.Sets;
 import com.google.common.collect.UnmodifiableIterator;
+
 import datawave.core.iterators.DatawaveFieldIndexListIteratorJexl;
 import datawave.data.type.Type;
 import datawave.data.type.util.NumericalEncoder;
@@ -35,8 +76,8 @@ import datawave.query.function.KeyToDocumentData;
 import datawave.query.function.LimitFields;
 import datawave.query.function.MaskedValueFilterFactory;
 import datawave.query.function.MaskedValueFilterInterface;
-import datawave.query.function.RemoveGroupingContext;
 import datawave.query.function.RangeProvider;
+import datawave.query.function.RemoveGroupingContext;
 import datawave.query.function.deserializer.KryoDocumentDeserializer;
 import datawave.query.function.serializer.KryoDocumentSerializer;
 import datawave.query.function.serializer.ToStringDocumentSerializer;
@@ -56,7 +97,6 @@ import datawave.query.iterator.profile.QuerySpan;
 import datawave.query.iterator.profile.QuerySpanCollector;
 import datawave.query.iterator.profile.SourceTrackingIterator;
 import datawave.query.jexl.DatawaveJexlContext;
-import datawave.query.jexl.DefaultArithmetic;
 import datawave.query.jexl.JexlASTHelper;
 import datawave.query.jexl.StatefulArithmetic;
 import datawave.query.jexl.functions.FieldIndexAggregator;
@@ -83,47 +123,6 @@ import datawave.query.util.Tuple3;
 import datawave.query.util.TupleToEntry;
 import datawave.query.util.TypeMetadata;
 import datawave.util.StringUtils;
-import org.apache.accumulo.core.data.ByteSequence;
-import org.apache.accumulo.core.data.Key;
-import org.apache.accumulo.core.data.Range;
-import org.apache.accumulo.core.data.Value;
-import org.apache.accumulo.core.iteratorsImpl.system.IterationInterruptedException;
-import org.apache.accumulo.core.iterators.IteratorEnvironment;
-import org.apache.accumulo.core.iterators.SortedKeyValueIterator;
-import org.apache.accumulo.core.iterators.YieldCallback;
-import org.apache.accumulo.core.iterators.YieldingKeyValueIterator;
-import org.apache.accumulo.tserver.tablet.TabletClosedException;
-import org.apache.commons.collections4.iterators.EmptyIterator;
-import org.apache.commons.jexl2.JexlArithmetic;
-import org.apache.commons.jexl2.parser.ASTJexlScript;
-import org.apache.commons.jexl2.parser.JexlNode;
-import org.apache.commons.lang.builder.CompareToBuilder;
-import org.apache.commons.pool.BasePoolableObjectFactory;
-import org.apache.commons.pool.impl.GenericObjectPool;
-import org.apache.hadoop.fs.FileSystem;
-import org.apache.hadoop.fs.Path;
-import org.apache.hadoop.io.Text;
-
-import org.apache.log4j.Logger;
-import org.apache.zookeeper.server.quorum.QuorumPeerConfig.ConfigException;
-
-import javax.annotation.Nullable;
-import java.io.IOException;
-import java.io.InterruptedIOException;
-import java.net.MalformedURLException;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.Comparator;
-import java.util.HashMap;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Map;
-import java.util.Map.Entry;
-import java.util.Set;
-
-import static com.google.common.base.Preconditions.checkNotNull;
-import static org.apache.commons.pool.impl.GenericObjectPool.WHEN_EXHAUSTED_BLOCK;
 
 /**
  * <p>
@@ -131,7 +130,7 @@ import static org.apache.commons.pool.impl.GenericObjectPool.WHEN_EXHAUSTED_BLOC
  * applies a series of transformations and predicates to satisfy the Datawave query requirements.
  *
  * <br>
- * 
+ *
  * <h1>Document Keys</h1>
  * <p>
  * The source of Document Keys is one of the following:
@@ -143,7 +142,7 @@ import static org.apache.commons.pool.impl.GenericObjectPool.WHEN_EXHAUSTED_BLOC
  * {@link Entry}&lt;Key,Value&gt;
  *
  * <br>
- * 
+ *
  * <h1>Transformations/Predicates</h1>
  * <p>
  * The following transformations/predicates are applied (order sensitive):
@@ -162,51 +161,51 @@ import static org.apache.commons.pool.impl.GenericObjectPool.WHEN_EXHAUSTED_BLOC
  */
 public class QueryIterator extends QueryOptions implements YieldingKeyValueIterator<Key,Value>, JexlContextCreator.JexlContextValueComparator,
                 SourceFactory<Key,Value>, SortedKeyValueIterator<Key,Value> {
-    
+
     private static final Logger log = Logger.getLogger(QueryIterator.class);
-    
+
     protected SortedKeyValueIterator<Key,Value> source;
     protected SortedKeyValueIterator<Key,Value> sourceForDeepCopies;
     protected Map<String,String> documentOptions;
     protected NestedIterator<Key> initKeySource, seekKeySource;
     protected Iterator<Entry<Key,Value>> serializedDocuments;
     protected boolean fieldIndexSatisfiesQuery = false;
-    
+
     protected Range range;
     protected Range originalRange;
-    
+
     protected Key key;
     protected Value value;
     protected YieldCallback<Key> yield;
-    
+
     protected IteratorEnvironment myEnvironment;
-    
+
     protected ASTJexlScript script = null;
-    
+
     protected JexlEvaluation myEvaluationFunction = null;
-    
+
     protected QuerySpan trackingSpan = null;
-    
+
     protected QuerySpanCollector querySpanCollector = new QuerySpanCollector();
-    
+
     protected UniqueTransform uniqueTransform = null;
-    
+
     protected GroupingIterator groupingIterator;
-    
+
     protected boolean groupingContextAddedByMe = false;
-    
+
     protected TypeMetadata typeMetadataWithNonIndexed = null;
-    
+
     protected Map<String,Object> exceededOrEvaluationCache = null;
-    
+
     protected ActiveQueryLog activeQueryLog;
-    
+
     protected ExcerptTransform excerptTransform = null;
-    
+
     protected RangeProvider rangeProvider;
-    
+
     public QueryIterator() {}
-    
+
     public QueryIterator(QueryIterator other, IteratorEnvironment env) {
         // Need to copy all members instantiated/modified during init()
         this.source = other.source.deepCopy(env);
@@ -226,65 +225,65 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
         // Defer to QueryOptions to re-set all of the query options
         super.deepCopy(other);
     }
-    
+
     private boolean gatherTimingDetails() {
         return collectTimingDetails || (statsdHostAndPort != null);
     }
-    
+
     @Override
     public void init(SortedKeyValueIterator<Key,Value> source, Map<String,String> options, IteratorEnvironment env) throws IOException {
         if (log.isTraceEnabled()) {
             log.trace("QueryIterator init()");
         }
-        
+
         if (!validateOptions(new SourcedOptions<>(source, env, options))) {
             throw new IllegalArgumentException("Could not initialize QueryIterator with " + options);
         }
-        
+
         // We want to add in spoofed dataTypes for Aggregation/Evaluation to
         // ensure proper numeric evaluation.
         this.typeMetadata = new TypeMetadata(this.getTypeMetadata());
         this.typeMetadataWithNonIndexed = new TypeMetadata(this.typeMetadata);
         this.typeMetadataWithNonIndexed.addForAllIngestTypes(this.getNonIndexedDataTypeMap());
-        
+
         this.exceededOrEvaluationCache = new HashMap<>();
-        
+
         // Parse the query
         try {
             this.script = JexlASTHelper.parseAndFlattenJexlQuery(this.getQuery());
             this.myEvaluationFunction = getJexlEvaluation(this.getQuery(), arithmetic);
-            
+
         } catch (Exception e) {
             throw new IOException("Could not parse the JEXL query: '" + this.getQuery() + "'", e);
         }
-        
+
         this.documentOptions = options;
         this.myEnvironment = env;
-        
+
         if (gatherTimingDetails()) {
             this.trackingSpan = new MultiThreadedQuerySpan(getStatsdClient());
             this.source = new SourceTrackingIterator(trackingSpan, source);
         } else {
             this.source = source;
         }
-        
+
         if (isDebugMultithreadedSources()) {
             this.source = new SourceThreadTrackingIterator(this.source);
         }
-        
+
         this.sourceForDeepCopies = this.source.deepCopy(this.myEnvironment);
-        
+
         // update ActiveQueryLog with (potentially) updated config
         if (env != null) {
             ActiveQueryLog.setConfig(env.getConfig());
         }
-        
+
         DatawaveFieldIndexListIteratorJexl.FSTManager.setHdfsFileSystem(this.getFileSystemCache());
         DatawaveFieldIndexListIteratorJexl.FSTManager.setHdfsFileCompressionCodec(this.getHdfsFileCompressionCodec());
-        
+
         pruneIvaratorCacheDirs();
     }
-    
+
     // this method will prune any ivarator cache directories that do not have a valid configuration.
     private void pruneIvaratorCacheDirs() throws InterruptedIOException {
         List<IvaratorCacheDirConfig> configsToRemove = new ArrayList<>();
@@ -295,13 +294,13 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
         }
         ivaratorCacheDirConfigs.removeAll(configsToRemove);
     }
-    
+
     private boolean hasValidBasePath(IvaratorCacheDirConfig config) throws InterruptedIOException {
         if (config.isValid()) {
             try {
                 Path basePath = new Path(config.getBasePathURI());
                 FileSystem fileSystem = this.getFileSystemCache().getFileSystem(basePath.toUri());
-                
+
                 // Note: The ivarator config base paths are used by ALL queries which run on the system, so there
                 // should be no harm in creating these directories if they do not already exist by this point.
                 // Also, since we are selecting these directories intentionally for use by the ivarators, it
@@ -315,7 +314,7 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
         }
         return false;
     }
-    
+
     @Override
     public boolean hasTop() {
         boolean yielded = (this.yield != null) && this.yield.hasYielded();
@@ -325,12 +324,12 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
         }
         return result;
     }
-    
+
     @Override
     public void enableYielding(YieldCallback<Key> yieldCallback) {
         this.yield = yieldCallback;
     }
-    
+
     @Override
     public void next() throws IOException {
         getActiveQueryLog().get(getQueryId()).beginCall(this.originalRange, ActiveQuery.CallType.NEXT);
@@ -353,7 +352,7 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
             }
         }
     }
-    
+
     @Override
     public void seek(Range range, Collection<ByteSequence> columnFamilies, boolean inclusive) throws IOException {
         // preserve the original range for use with the Final Document tracking iterator because it is placed after the ResultCountingIterator
@@ -361,22 +360,21 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
         originalRange = range;
         getActiveQueryLog().get(getQueryId()).beginCall(this.originalRange, ActiveQuery.CallType.SEEK);
         ActiveQueryLog.getInstance().get(getQueryId()).beginCall(this.originalRange, ActiveQuery.CallType.SEEK);
-        
+
         try {
-            if (this.isIncludeGroupingContext() == false
-                            && (this.query.contains("grouping:") || this.query.contains("matchesInGroup") || this.query.contains("MatchesInGroup") || this.query
-                                            .contains("atomValuesMatch"))) {
+            if (this.isIncludeGroupingContext() == false && (this.query.contains("grouping:") || this.query.contains("matchesInGroup")
+                            || this.query.contains("MatchesInGroup") || this.query.contains("atomValuesMatch"))) {
                 this.setIncludeGroupingContext(true);
                 this.groupingContextAddedByMe = true;
             } else {
                 this.groupingContextAddedByMe = false;
             }
-            
+
             if (log.isDebugEnabled()) {
                 log.debug("Seek range: " + range + " " + query);
             }
             this.range = range;
-            
+
             // determine whether this is a teardown/rebuild range
             long resultCount = 0;
             if (!range.isStartKeyInclusive()) {
@@ -387,7 +385,7 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
                     prepareKeyValue();
                     return;
                 }
-                
+
                 // see if we have a count in the cf
                 Key startKey = range.getStartKey();
                 String[] parts = StringUtils.split(startKey.getColumnFamily().toString(), '\0');
@@ -399,10 +397,10 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
                     this.range = range = new Range(startKey, range.isStartKeyInclusive(), range.getEndKey(), range.isEndKeyInclusive());
                 }
             }
-            
+
             // determine whether this is a document specific range
             Range documentRange = isDocumentSpecificRange(range) ? range : null;
-            
+
             // if we have a document specific range, but the key is not
             // inclusive then we have already returned the document; this scan
             // is done
@@ -416,7 +414,7 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
                     this.seekKeySource = new EmptyTreeIterable();
                 }
             }
-            
+
             // if the Range is for a single document and the query doesn't reference any index-only or tokenized fields
             else if (documentRange != null && (!this.isContainsIndexOnlyTerms() && this.getTermFrequencyFields().isEmpty() && !super.mustUseFieldIndex)) {
                 if (log.isTraceEnabled()) {
@@ -429,7 +427,7 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
                 }
                 // we can only trim if we're certain that the projected fields
                 // aren't needed for evaluation
-                
+
                 if (gatherTimingDetails()) {
                     this.seekKeySource = new EvaluationTrackingNestedIterator(QuerySpan.Stage.DocumentSpecificTree, trackingSpan,
                                     new DocumentSpecificNestedIterator(documentKey), myEnvironment);
@@ -439,42 +437,42 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
             } else {
                 this.seekKeySource = buildDocumentIterator(documentRange, range, columnFamilies, inclusive);
             }
-            
+
             // Create the pipeline iterator for document aggregation and
             // evaluation within a thread pool
             PipelineIterator pipelineIter = PipelineFactory.createIterator(this.seekKeySource, getMaxEvaluationPipelines(), getMaxPipelineCachedResults(),
                             getSerialPipelineRequest(), querySpanCollector, trackingSpan, this, sourceForDeepCopies.deepCopy(myEnvironment), myEnvironment,
                             yield, yieldThresholdMs, columnFamilies, inclusive);
-            
+
             pipelineIter.setCollectTimingDetails(collectTimingDetails);
             // TODO pipelineIter.setStatsdHostAndPort(statsdHostAndPort);
-            
+
             pipelineIter.startPipeline();
-            
+
             // gather Key,Document Entries from the pipelines
             Iterator<Entry<Key,Document>> pipelineDocuments = pipelineIter;
-            
+
             if (log.isTraceEnabled()) {
                 pipelineDocuments = Iterators.filter(pipelineDocuments, keyDocumentEntry -> {
                     log.trace("after pipeline, keyDocumentEntry:" + keyDocumentEntry);
                     return true;
                 });
             }
-            
+
             // now apply the unique iterator if requested
             UniqueTransform uniquify = getUniqueTransform();
             if (uniquify != null) {
                 // pipelineDocuments = uniquify;
                 pipelineDocuments = Iterators.filter(pipelineDocuments, uniquify.getUniquePredicate());
             }
-            
+
             // apply the grouping iterator if requested and if the batch size is greater than zero
             // if the batch size is 0, then grouping is computed only on the web server
             if (this.groupFieldsBatchSize > 0) {
                 GroupingIterator groupify = getGroupingIteratorInstance(pipelineDocuments);
                 if (groupify != null) {
                     pipelineDocuments = groupify;
-                    
+
                     if (log.isTraceEnabled()) {
                         pipelineDocuments = Iterators.filter(pipelineDocuments, keyDocumentEntry -> {
                             log.trace("after grouping, keyDocumentEntry:" + keyDocumentEntry);
@@ -483,14 +481,14 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
                     }
                 }
             }
-            
+
             pipelineDocuments = Iterators.filter(pipelineDocuments, keyDocumentEntry -> {
                 // last chance before the documents are serialized
-                            getActiveQueryLog().get(getQueryId()).recordStats(keyDocumentEntry.getValue(), querySpanCollector.getCombinedQuerySpan(null));
-                            // Always return true since we just want to record data in the ActiveQueryLog
-                            return true;
-                        });
-            
+                getActiveQueryLog().get(getQueryId()).recordStats(keyDocumentEntry.getValue(), querySpanCollector.getCombinedQuerySpan(null));
+                // Always return true since we just want to record data in the ActiveQueryLog
+                return true;
+            });
+
             if (this.getReturnType() == ReturnType.kryo) {
                 // Serialize the Document using Kryo
                 this.serializedDocuments = Iterators.transform(pipelineDocuments, new KryoDocumentSerializer(isReducedResponse(), isCompressResults()));
@@ -503,7 +501,7 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
             } else {
                 throw new IllegalArgumentException("Unknown return type of: " + this.getReturnType());
             }
-            
+
             if (log.isTraceEnabled()) {
                 KryoDocumentDeserializer dser = new KryoDocumentDeserializer();
                 this.serializedDocuments = Iterators.filter(this.serializedDocuments, keyValueEntry -> {
@@ -511,7 +509,7 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
                     return true;
                 });
             }
-            
+
             // now add the result count to the keys (required when not sorting UIDs)
             // Cannot do this on document specific ranges as the count would place the keys outside the initial range
             if (!sortedUIDs && documentRange == null) {
@@ -520,7 +518,7 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
                 // we have sorted UIDs, so we can mask out the cq
                 this.serializedDocuments = new KeyAdjudicator<>(serializedDocuments, yield);
             }
-            
+
             // only add the final document tracking iterator which sends stats back to the client if collectTimingDetails is true
             if (collectTimingDetails) {
                 // if there is no document to return, then add an empty document
@@ -535,7 +533,7 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
                     return true;
                 });
             }
-            
+
             // Determine if we have items to return
             prepareKeyValue();
         } catch (Exception e) {
@@ -555,7 +553,7 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
             }
         }
     }
-    
+
     /**
      * Handle an exception returned from seek or next. This will silently ignore IterationInterruptedException as that happens when the underlying iterator was
      * interrupted because the client is no longer listening.
@@ -567,7 +565,7 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
      */
     private void handleException(Exception e) throws IOException {
         Throwable reason = e;
-        
+
         // We need to pass IOException, IteratorInterruptedException, and TabletClosedExceptions up to the Tablet as they are
         // handled specially to ensure that the client will retry the scan elsewhere
         IOException ioe = null;
@@ -582,7 +580,7 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
         if (reason instanceof TabletClosedException) {
             tce = (TabletClosedException) reason;
         }
-        
+
         int depth = 1;
         while (iie == null && reason.getCause() != null && reason.getCause() != reason && depth < 100) {
             reason = reason.getCause();
@@ -597,7 +595,7 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
             }
             depth++;
         }
-        
+
         // NOTE: Only logging debug here because the Tablet/LookupTask will log the exception as a WARN if we actually have an problem here
         if (iie != null) {
             // exit gracefully if we are yielding as an iie is expected in this case
@@ -618,7 +616,7 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
             throw new RuntimeException("Failure for query " + queryId, e);
         }
     }
-    
+
     /**
      * Build the document iterator
      *
@@ -642,117 +640,30 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
      */
     protected NestedIterator<Key> buildDocumentIterator(Range documentRange, Range seekRange, Collection<ByteSequence> columnFamilies, boolean inclusive)
                     throws IOException, ConfigException, InstantiationException, IllegalAccessException {
-        NestedIterator<Key> docIter = null;
+
+        // If we had an event-specific range previously, we need to reset it back
+        // to the source we created during init
+        NestedIterator<Key> docIter = getOrSetKeySource(documentRange, script);
+
+        initKeySource = docIter;
+
         if (log.isTraceEnabled()) {
-            log.trace("Batched queries is " + batchedQueries);
+            log.trace("Using init()'ialized source: " + this.initKeySource.getClass().getName());
         }
-        if (batchedQueries >= 1) {
-            List<NestedQuery<Key>> nests = Lists.newArrayList();
-            
-            for (Entry<Range,String> queries : batchStack) {
-                
-                Range myRange = queries.getKey();
-                
-                if (log.isTraceEnabled()) {
-                    log.trace("Adding " + myRange + " from seekrange " + seekRange);
-                }
-                
-                /*
-                 * Only perform the following checks if start key is not infinite and document range is specified
-                 */
-                if (null != seekRange && !seekRange.isInfiniteStartKey()) {
-                    Key seekStartKey = seekRange.getStartKey();
-                    Key myStartKey = myRange.getStartKey();
-                    
-                    /*
-                     * if our seek key is greater than our start key we can skip this batched query. myStartKey.compareTo(seekStartKey) must be <= 0, which
-                     * means that startKey must be greater than or equal be seekStartKey
-                     */
-                    if (null != myStartKey && null != seekStartKey && !seekRange.contains(myStartKey)) {
-                        
-                        if (log.isTraceEnabled()) {
-                            log.trace("skipping " + myRange);
-                        }
-                        
-                        continue;
-                    }
-                }
-                
-                JexlArithmetic myArithmetic;
-                if (arithmetic instanceof StatefulArithmetic) {
-                    myArithmetic = ((StatefulArithmetic) arithmetic).clone();
-                } else {
-                    myArithmetic = new DefaultArithmetic();
-                }
-                
-                // Parse the query
-                ASTJexlScript myScript = null;
-                JexlEvaluation eval = null;
-                try {
-                    
-                    myScript = JexlASTHelper.parseJexlQuery(queries.getValue());
-                    eval = getJexlEvaluation(queries.getValue(), myArithmetic);
-                    
-                } catch (Exception e) {
-                    throw new IOException("Could not parse the JEXL query: '" + this.getQuery() + "'", e);
-                }
-                // If we had an event-specific range previously, we need to
-                // reset it back
-                // to the source we created during init
-                NestedIterator<Key> subDocIter = getOrSetKeySource(myRange, myScript);
-                
-                if (log.isTraceEnabled()) {
-                    log.trace("Using init()'ialized source: " + subDocIter.getClass().getName());
-                }
-                
-                if (gatherTimingDetails()) {
-                    subDocIter = new EvaluationTrackingNestedIterator(QuerySpan.Stage.FieldIndexTree, trackingSpan, subDocIter, myEnvironment);
-                }
-                
-                // Seek() the boolean logic stuff
-                ((SeekableIterator) subDocIter).seek(myRange, columnFamilies, inclusive);
-                
-                NestedQuery<Key> nestedQueryObj = new NestedQuery<>();
-                nestedQueryObj.setQuery(queries.getValue());
-                nestedQueryObj.setIterator(subDocIter);
-                nestedQueryObj.setQueryScript(myScript);
-                nestedQueryObj.setEvaluation(eval);
-                nestedQueryObj.setRange(queries.getKey());
-                nests.add(nestedQueryObj);
-            }
-            
-            docIter = new NestedQueryIterator<>(nests);
-            
-            // now lets start off the nested iterator
-            docIter.initialize();
-            
-            initKeySource = docIter;
-            
-        } else {
-            // If we had an event-specific range previously, we need to reset it back
-            // to the source we created during init
-            docIter = getOrSetKeySource(documentRange, script);
-            
-            initKeySource = docIter;
-            
-            if (log.isTraceEnabled()) {
-                log.trace("Using init()'ialized source: " + this.initKeySource.getClass().getName());
-            }
-            
-            if (gatherTimingDetails()) {
-                docIter = new EvaluationTrackingNestedIterator(QuerySpan.Stage.FieldIndexTree, trackingSpan, docIter, myEnvironment);
-            }
-            
-            // Seek() the boolean logic stuff
-            ((SeekableIterator) docIter).seek(range, columnFamilies, inclusive);
-            
-            // now lets start off the nested iterator
-            docIter.initialize();
+
+        if (gatherTimingDetails()) {
+            docIter = new EvaluationTrackingNestedIterator(QuerySpan.Stage.FieldIndexTree, trackingSpan, docIter, myEnvironment);
         }
-        
+
+        // Seek() the boolean logic stuff
+        ((SeekableIterator) docIter).seek(range, columnFamilies, inclusive);
+
+        // now lets start off the nested iterator
+        docIter.initialize();
+
         return docIter;
     }
-    
+
     /**
      * There was a request to create a serial pipeline. The factory may not choose to honor this.
      *
@@ -761,7 +672,7 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
     private boolean getSerialPipelineRequest() {
         return serialEvaluationPipeline;
     }
-    
+
     /**
      * A routine which should always be used to create deep copies of the source. This ensures that we are thread safe when doing these copies.
      *
@@ -774,11 +685,11 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
         }
         return sourceDeepCopy;
     }
-    
+
     /**
      * Returns the elements of {@code unfiltered} that satisfy a predicate. This is used instead of the google commons Iterators.filter to create a non-stateful
      * filtering iterator.
-     * 
+     *
      * @param unfiltered
      *            the unfiltered iterator
      * @param predicate
@@ -792,7 +703,7 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
         checkNotNull(predicate);
         return new UnmodifiableIterator<T>() {
             private T next;
-            
+
             protected T computeNext() {
                 while (unfiltered.hasNext()) {
                     T element = unfiltered.next();
@@ -802,7 +713,7 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
                 }
                 return null;
             }
-            
+
             @Override
             public final boolean hasNext() {
                 if (next == null) {
@@ -810,7 +721,7 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
                 }
                 return (next != null);
             }
-            
+
             @Override
             public T next() {
                 T next = this.next;
@@ -819,7 +730,7 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
             }
         };
     }
-    
+
     /**
      * Create the pipeline. It is very important that this pipeline can handle resetting the bottom iterator with a new value. This means that hasNext() needs
      * to call the next iterator. The only state that can be maintained is the next value ready after hasNext() has been called. Once next returns the value,
@@ -841,7 +752,7 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
     public Iterator<Entry<Key,Document>> createDocumentPipeline(SortedKeyValueIterator<Key,Value> deepSourceCopy,
                     final NestedQueryIterator<Key> documentSpecificSource, Collection<ByteSequence> columnFamilies, boolean inclusive,
                     QuerySpanCollector querySpanCollector) {
-        
+
         QuerySpan trackingSpan = null;
         if (gatherTimingDetails()) {
             trackingSpan = new QuerySpan(getStatsdClient());
@@ -850,7 +761,7 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
             log.trace("createDocumentPipeline");
         }
         final Function<Entry<Key,Document>,Entry<DocumentData,Document>> docMapper;
-        
+
         if (isFieldIndexSatisfyingQuery()) {
             if (log.isTraceEnabled()) {
                 log.trace("isFieldIndexSatisfyingQuery");
@@ -859,7 +770,7 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
                 @Nullable
                 @Override
                 public Entry<DocumentData,Document> apply(@Nullable Entry<Key,Document> input) {
-                    
+
                     Entry<DocumentData,Document> entry = null;
                     if (input != null) {
                         entry = Maps.immutableEntry(new DocumentData(input.getKey(), Collections.singleton(input.getKey()), Collections.EMPTY_LIST, true),
@@ -869,15 +780,15 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
                 }
             };
         } else {
-            docMapper = new KeyToDocumentData(deepSourceCopy, myEnvironment, documentOptions, getEquality(), getEvaluationFilter(),
-                            this.includeHierarchyFields, this.includeHierarchyFields).withRangeProvider(getRangeProvider());
+            docMapper = new KeyToDocumentData(deepSourceCopy, myEnvironment, documentOptions, getEquality(), getEvaluationFilter(), this.includeHierarchyFields,
+                            this.includeHierarchyFields).withRangeProvider(getRangeProvider()).withAggregationThreshold(getDocAggregationThresholdMs());
         }
-        
+
         Iterator<Entry<DocumentData,Document>> sourceIterator = Iterators.transform(documentSpecificSource, from -> {
             Entry<Key,Document> entry = Maps.immutableEntry(from, documentSpecificSource.document());
             return docMapper.apply(entry);
         });
-        
+
         // Take the document Keys and transform it into Entry<Key,Document>,
         // removing Attributes for this Document
         // which do not fall within the expected time range
@@ -889,17 +800,17 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
         } else {
             documents = Iterators.transform(sourceIterator, a);
         }
-        
+
         // Inject the data type as a field if the user requested it
         if (this.includeDatatype) {
             if (gatherTimingDetails()) {
-                documents = Iterators.transform(documents, new EvaluationTrackingFunction<>(QuerySpan.Stage.DataTypeAsField, trackingSpan, new DataTypeAsField(
-                                this.datatypeKey)));
+                documents = Iterators.transform(documents,
+                                new EvaluationTrackingFunction<>(QuerySpan.Stage.DataTypeAsField, trackingSpan, new DataTypeAsField(this.datatypeKey)));
             } else {
                 documents = Iterators.transform(documents, new DataTypeAsField(this.datatypeKey));
             }
         }
-        
+
         // Inject the document permutations if required
         if (!this.getDocumentPermutations().isEmpty()) {
             if (gatherTimingDetails()) {
@@ -909,7 +820,7 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
                 documents = Iterators.transform(documents, new DocumentPermutation.DocumentPermutationAggregation(this.getDocumentPermutations()));
             }
         }
-        
+
         if (gatherTimingDetails()) {
             documents = new EvaluationTrackingIterator(QuerySpan.Stage.DocumentEvaluation, trackingSpan, getEvaluation(documentSpecificSource, deepSourceCopy,
                             documents, compositeMetadata, typeMetadataWithNonIndexed, columnFamilies, inclusive));
@@ -917,24 +828,24 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
             documents = getEvaluation(documentSpecificSource, deepSourceCopy, documents, compositeMetadata, typeMetadataWithNonIndexed, columnFamilies,
                             inclusive);
         }
-        
+
         ExcerptTransform excerptTransform = getExcerptTransform();
         if (excerptTransform != null) {
             documents = excerptTransform.getIterator(documents);
         }
-        
+
         // a hook to allow mapping the document such as with the TLD or Parent
         // query logics
         // or if the document was not aggregated in the first place because the
         // field index fields completely satisfied the query
         documents = mapDocument(deepSourceCopy, documents, compositeMetadata);
-        
+
         // apply any configured post processing
         documents = getPostProcessingChain(documents);
         if (gatherTimingDetails()) {
             documents = new EvaluationTrackingIterator(QuerySpan.Stage.PostProcessing, trackingSpan, documents);
         }
-        
+
         // Filter out masked values if requested
         if (this.filterMaskedValues) {
             MaskedValueFilterInterface mvfi = MaskedValueFilterFactory.get(this.isIncludeGroupingContext(), this.isReducedResponse());
@@ -944,15 +855,15 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
                 documents = Iterators.transform(documents, mvfi);
             }
         }
-        
+
         // now filter the attributes to those with the keep flag set true
         if (gatherTimingDetails()) {
-            documents = Iterators.transform(documents, new EvaluationTrackingFunction<>(QuerySpan.Stage.AttributeKeepFilter, trackingSpan,
-                            new AttributeKeepFilter<>()));
+            documents = Iterators.transform(documents,
+                            new EvaluationTrackingFunction<>(QuerySpan.Stage.AttributeKeepFilter, trackingSpan, new AttributeKeepFilter<>()));
         } else {
             documents = Iterators.transform(documents, new AttributeKeepFilter<>());
         }
-        
+
         // Project fields using a whitelist or a blacklist before serialization
         if (this.projectResults) {
             if (gatherTimingDetails()) {
@@ -961,43 +872,42 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
                 documents = Iterators.transform(documents, getProjection());
             }
         }
-        
+
         // remove the composite entries
         documents = Iterators.transform(documents, this.getCompositeProjection());
-        
+
         // Filter out any Documents which are empty (e.g. due to attribute
         // projection or visibility filtering)
         if (gatherTimingDetails()) {
-            documents = statelessFilter(documents, new EvaluationTrackingPredicate<>(QuerySpan.Stage.EmptyDocumentFilter, trackingSpan,
-                            new EmptyDocumentFilter()));
-            documents = Iterators
-                            .transform(documents, new EvaluationTrackingFunction<>(QuerySpan.Stage.DocumentMetadata, trackingSpan, new DocumentMetadata()));
+            documents = statelessFilter(documents,
+                            new EvaluationTrackingPredicate<>(QuerySpan.Stage.EmptyDocumentFilter, trackingSpan, new EmptyDocumentFilter()));
+            documents = Iterators.transform(documents,
+                            new EvaluationTrackingFunction<>(QuerySpan.Stage.DocumentMetadata, trackingSpan, new DocumentMetadata()));
         } else {
             documents = statelessFilter(documents, new EmptyDocumentFilter());
             documents = Iterators.transform(documents, new DocumentMetadata());
         }
-        
+
         if (!this.limitFieldsMap.isEmpty()) {
             // note that we have already reduced the document to those attributes to keep. This will reduce the attributes further
             // base on those fields we are limiting.
             if (gatherTimingDetails()) {
-                documents = Iterators.transform(documents,
-                                new EvaluationTrackingFunction<>(QuerySpan.Stage.LimitFields, trackingSpan, new LimitFields(this.getLimitFieldsMap())));
+                documents = Iterators.transform(documents, new EvaluationTrackingFunction<>(QuerySpan.Stage.LimitFields, trackingSpan, getLimitFields()));
             } else {
-                documents = Iterators.transform(documents, new LimitFields(this.getLimitFieldsMap()));
+                documents = Iterators.transform(documents, getLimitFields());
             }
         }
-        
+
         // do I need to remove the grouping context I added above?
         if (groupingContextAddedByMe) {
             if (gatherTimingDetails()) {
-                documents = Iterators.transform(documents, new EvaluationTrackingFunction<>(QuerySpan.Stage.RemoveGroupingContext, trackingSpan,
-                                new RemoveGroupingContext()));
+                documents = Iterators.transform(documents,
+                                new EvaluationTrackingFunction<>(QuerySpan.Stage.RemoveGroupingContext, trackingSpan, new RemoveGroupingContext()));
             } else {
                 documents = Iterators.transform(documents, new RemoveGroupingContext());
             }
         }
-        
+
         // only add the pipeline query span collection iterator which will cache metrics with each document if collectTimingDetails is true
         if (collectTimingDetails) {
             // if there is not a result, then add the trackingSpan to the
@@ -1006,37 +916,37 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
             // will be added here
             documents = new PipelineQuerySpanCollectionIterator(querySpanCollector, trackingSpan, documents);
         }
-        
+
         return documents;
     }
-    
+
     protected Iterator<Entry<Key,Document>> getEvaluation(SortedKeyValueIterator<Key,Value> sourceDeepCopy, Iterator<Entry<Key,Document>> documents,
                     CompositeMetadata compositeMetadata, TypeMetadata typeMetadataForEval, Collection<ByteSequence> columnFamilies, boolean inclusive) {
         return getEvaluation(null, sourceDeepCopy, documents, compositeMetadata, typeMetadataForEval, columnFamilies, inclusive);
     }
-    
+
     protected Iterator<Entry<Key,Document>> getEvaluation(NestedQueryIterator<Key> documentSource, SortedKeyValueIterator<Key,Value> sourceDeepCopy,
                     Iterator<Entry<Key,Document>> documents, CompositeMetadata compositeMetadata, TypeMetadata typeMetadataForEval,
                     Collection<ByteSequence> columnFamilies, boolean inclusive) {
         // Filter the Documents by testing them against the JEXL query
         if (!this.disableEvaluation) {
-            
+
             JexlEvaluation jexlEvaluationFunction = getJexlEvaluation(documentSource);
             Collection<String> variables = null;
             if (null != documentSource && null != documentSource.getQuery()) {
-                
+
                 variables = VariableNameVisitor.parseQuery(jexlEvaluationFunction.parse(documentSource.getQuery()));
             } else {
                 variables = VariableNameVisitor.parseQuery(jexlEvaluationFunction.parse(query));
             }
-            
+
             final Iterator<Tuple2<Key,Document>> tupleItr = Iterators.transform(documents, new EntryToTuple<>());
-            
+
             // get the function we use for the tf functionality. Note we are
             // getting an additional source deep copy for this function
             final Iterator<Tuple3<Key,Document,Map<String,Object>>> itrWithContext;
             if (this.isTermFrequenciesRequired()) {
-                
+
                 TermFrequencyConfig tfConfig = new TermFrequencyConfig();
                 tfConfig.setScript(getScript(documentSource));
                 tfConfig.setIterEnv(myEnvironment);
@@ -1046,30 +956,31 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
                 tfConfig.setTypeMetadata(getTypeMetadata());
                 tfConfig.setEquality(getEquality());
                 tfConfig.setEvaluationFilter(getEvaluationFilter());
-                
+                tfConfig.setTfAggregationThreshold(getTfAggregationThresholdMs());
+
                 Function<Tuple2<Key,Document>,Tuple3<Key,Document,Map<String,Object>>> tfFunction = buildTfFunction(tfConfig);
-                
+
                 itrWithContext = TraceIterators.transform(tupleItr, tfFunction, "Term Frequency Lookup");
             } else {
                 itrWithContext = Iterators.transform(tupleItr, new EmptyContext<>());
             }
-            
+
             try {
                 IteratorBuildingVisitor iteratorBuildingVisitor = createIteratorBuildingVisitor(getDocumentRange(documentSource), false, this.sortedUIDs);
                 Multimap<String,JexlNode> delayedNonEventFieldMap = DelayedNonEventSubTreeVisitor.getDelayedNonEventFieldMap(iteratorBuildingVisitor, script,
                                 getNonEventFields());
-                
+
                 IndexOnlyContextCreatorBuilder contextCreatorBuilder = new IndexOnlyContextCreatorBuilder().setSource(sourceDeepCopy)
                                 .setRange(getDocumentRange(documentSource)).setTypeMetadata(typeMetadataForEval).setCompositeMetadata(compositeMetadata)
                                 .setOptions(this).setVariables(variables).setIteratorBuildingVisitor(iteratorBuildingVisitor)
                                 .setDelayedNonEventFieldMap(delayedNonEventFieldMap).setEquality(getEquality()).setColumnFamilies(columnFamilies)
                                 .setInclusive(inclusive).setComparatorFactory(this);
                 final IndexOnlyContextCreator contextCreator = contextCreatorBuilder.build();
-                
+
                 if (exceededOrEvaluationCache != null) {
                     contextCreator.addAdditionalEntries(exceededOrEvaluationCache);
                 }
-                
+
                 final Iterator<Tuple3<Key,Document,DatawaveJexlContext>> itrWithDatawaveJexlContext = Iterators.transform(itrWithContext, contextCreator);
                 Iterator<Tuple3<Key,Document,DatawaveJexlContext>> matchedDocuments = statelessFilter(itrWithDatawaveJexlContext, jexlEvaluationFunction);
                 if (log.isTraceEnabled()) {
@@ -1084,7 +995,7 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
         }
         return documents;
     }
-    
+
     /**
      * This method exists so that extending classes can implement specific versions of the TFFunction. Specifically, so the
      * {@link datawave.query.tld.TLDQueryIterator} can set the {@link TermFrequencyConfig#setTld(boolean)} option to true
@@ -1096,7 +1007,7 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
     protected Function<Tuple2<Key,Document>,Tuple3<Key,Document,Map<String,Object>>> buildTfFunction(TermFrequencyConfig tfConfig) {
         return TFFactory.getFunction(tfConfig);
     }
-    
+
     private Range getDocumentRange(NestedQueryIterator<Key> documentSource) {
         if (null == documentSource) {
             return range;
@@ -1108,30 +1019,30 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
             return nestedQuery.getRange();
         }
     }
-    
+
     protected JexlEvaluation getJexlEvaluation(NestedQueryIterator<Key> documentSource) {
         return getJexlEvaluation(query, documentSource, getArithmetic());
     }
-    
+
     protected JexlEvaluation getJexlEvaluation(String query) {
         return getJexlEvaluation(query, null, getArithmetic());
     }
-    
+
     protected JexlEvaluation getJexlEvaluation(String query, JexlArithmetic arithmetic) {
         return getJexlEvaluation(query, null, arithmetic);
     }
-    
+
     protected JexlEvaluation getJexlEvaluation(String query, NestedQueryIterator<Key> documentSource) {
         return getJexlEvaluation(query, documentSource, getArithmetic());
     }
-    
+
     protected JexlEvaluation getJexlEvaluation(String query, NestedQueryIterator<Key> documentSource, JexlArithmetic arithmetic) {
         JexlEvaluation jexlEvaluationFunction = null;
-        
+
         if (arithmetic == null) {
             arithmetic = getArithmetic();
         }
-        
+
         if (null == documentSource) {
             jexlEvaluationFunction = new JexlEvaluation(query, arithmetic);
         } else {
@@ -1145,15 +1056,19 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
                 }
             }
         }
-        
+
         // update the jexl evaluation to gather phrase offsets if required for excerpts
         if (getExcerptFields() != null && !getExcerptFields().isEmpty()) {
             jexlEvaluationFunction.setGatherPhraseOffsets(true);
         }
-        
+
         return jexlEvaluationFunction;
     }
-    
+
+    protected LimitFields getLimitFields() {
+        return new LimitFields(this.getLimitFieldsMap(), this.getMatchingFieldSets());
+    }
+
     @Override
     public JexlArithmetic getArithmetic() {
         JexlArithmetic myArithmetic = this.arithmetic;
@@ -1162,7 +1077,7 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
         }
         return myArithmetic;
     }
-    
+
     protected ASTJexlScript getScript(NestedQueryIterator<Key> documentSource) {
         if (null == documentSource) {
             return script;
@@ -1178,7 +1093,7 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
             return rangeScript;
         }
     }
-    
+
     protected Iterator<Entry<Key,Document>> mapDocument(SortedKeyValueIterator<Key,Value> deepSourceCopy, Iterator<Entry<Key,Document>> documents,
                     CompositeMetadata compositeMetadata) {
         // now lets pull the data if we need to
@@ -1187,16 +1102,17 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
         }
         if (fieldIndexSatisfiesQuery) {
             final KeyToDocumentData docMapper = new KeyToDocumentData(deepSourceCopy, this.myEnvironment, this.documentOptions, getEquality(),
-                            getEvaluationFilter(), this.includeHierarchyFields, this.includeHierarchyFields).withRangeProvider(getRangeProvider());
-            
-            Iterator<Tuple2<Key,Document>> mappedDocuments = Iterators.transform(
-                            documents,
-                            new GetDocument(docMapper, new Aggregation(this.getTimeFilter(), typeMetadataWithNonIndexed, compositeMetadata, this
-                                            .isIncludeGroupingContext(), this.includeRecordId, this.disableIndexOnlyDocuments(), getEvaluationFilter(),
-                                            isTrackSizes())));
-            
+                            getEvaluationFilter(), this.includeHierarchyFields, this.includeHierarchyFields).withRangeProvider(getRangeProvider())
+                                            .withAggregationThreshold(getDocAggregationThresholdMs());
+
+            Iterator<Tuple2<Key,Document>> mappedDocuments = Iterators.transform(documents,
+                            new GetDocument(docMapper,
+                                            new Aggregation(this.getTimeFilter(), typeMetadataWithNonIndexed, compositeMetadata,
+                                                            this.isIncludeGroupingContext(), this.includeRecordId, this.disableIndexOnlyDocuments(),
+                                                            getEvaluationFilter(), isTrackSizes())));
+
             Iterator<Entry<Key,Document>> retDocuments = Iterators.transform(mappedDocuments, new TupleToEntry<>());
-            
+
             // Inject the document permutations if required
             if (!this.getDocumentPermutations().isEmpty()) {
                 if (gatherTimingDetails()) {
@@ -1210,31 +1126,31 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
         }
         return documents;
     }
-    
+
     public class GetDocument implements Function<Entry<Key,Document>,Tuple2<Key,Document>> {
         private final KeyToDocumentData fetchDocData;
         private final Aggregation makeDocument;
         private final EntryToTuple<Key,Document> convert = new EntryToTuple<>();
-        
+
         public GetDocument(KeyToDocumentData fetchDocData, Aggregation makeDocument) {
             this.fetchDocData = fetchDocData;
             this.makeDocument = makeDocument;
         }
-        
+
         public Tuple2<Key,Document> apply(Entry<Key,Document> from) {
             from = makeDocument.apply(this.fetchDocData.apply(from));
             return convert.apply(from);
         }
     }
-    
+
     private void prepareKeyValue() {
         if (this.serializedDocuments.hasNext()) {
             Entry<Key,Value> entry = this.serializedDocuments.next();
-            
+
             if (log.isTraceEnabled()) {
                 log.trace("next() returned " + entry);
             }
-            
+
             this.key = entry.getKey();
             this.value = entry.getValue();
 
@@ -1246,22 +1162,22 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
             this.value = null;
         }
     }
-    
+
     @Override
     public Key getTopKey() {
         return this.key;
     }
-    
+
     @Override
     public Value getTopValue() {
         return this.value;
     }
-    
+
     @Override
     public SortedKeyValueIterator<Key,Value> deepCopy(IteratorEnvironment env) {
         return new QueryIterator(this, env);
     }
-    
+
     /**
      * If we are performing evaluation (have a query) and are not performing a full-table scan, then we want to instantiate the boolean logic iterators
      *
@@ -1270,32 +1186,40 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
     public boolean instantiateBooleanLogic() {
         return !this.disableEvaluation && !this.fullTableScanOnly;
     }
-    
+
     public void debugBooleanLogicIterators(NestedIterator<Key> root) {
         if (log.isDebugEnabled()) {
             debugBooleanLogicIterator(root, "");
         }
     }
-    
+
     private void debugBooleanLogicIterator(NestedIterator<Key> root, String prefix) {
         log.debug(root);
-        
+
         if (null == root || null == root.children()) {
             return;
         }
-        
+
         for (NestedIterator<Key> child : root.children()) {
             debugBooleanLogicIterator(child, prefix + "  ");
         }
     }
-    
+
     protected DocumentProjection getProjection() {
         DocumentProjection projection = new DocumentProjection(this.isIncludeGroupingContext(), this.isReducedResponse(), isTrackSizes());
-        
+
         if (this.useWhiteListedFields) {
+            // make sure we include any fields being matched in the limit fields mechanism
+            if (!this.matchingFieldSets.isEmpty()) {
+                this.whiteListedFields.addAll(getMatchingFieldList());
+            }
             projection.setIncludes(this.whiteListedFields);
             return projection;
         } else if (this.useBlackListedFields) {
+            // make sure we are not excluding any fields being matched in the limit fields mechanism
+            if (!this.matchingFieldSets.isEmpty()) {
+                this.blackListedFields.removeAll(getMatchingFieldList());
+            }
             projection.setExcludes(this.blackListedFields);
             return projection;
         } else {
@@ -1304,7 +1228,7 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
             throw new IllegalArgumentException(msg);
         }
     }
-    
+
     protected DocumentProjection getCompositeProjection() {
         DocumentProjection projection = new DocumentProjection(this.isIncludeGroupingContext(), this.isReducedResponse(), isTrackSizes());
         Set<String> composites = Sets.newHashSet();
@@ -1317,10 +1241,14 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
                 }
             }
         }
+        // make sure we include any fields being matched in the limit fields mechanism
+        if (!this.matchingFieldSets.isEmpty()) {
+            composites.removeAll(getMatchingFieldList());
+        }
         projection.setExcludes(composites);
         return projection;
     }
-    
+
     /**
      * Determines if a range is document specific according to the following criteria
      *
@@ -1336,7 +1264,7 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
      */
     public static boolean isDocumentSpecificRange(Range r) {
         Preconditions.checkNotNull(r);
-        
+
         // Also @see datawave.query.index.lookup.TupleToRange
         // We have already made the assertion that the client is sending us
         // an inclusive start key due to the inability to ascertain the
@@ -1344,19 +1272,19 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
         //
         // As such, it is acceptable for us to make the same assertion on the
         // inclusivity of the start key.
-        
+
         // Cannot have a null start or end key
         if (r.isInfiniteStartKey() || r.isInfiniteStopKey()) {
             return false;
         }
-        
+
         // Cannot span multiple rows.
         Key startKey = r.getStartKey();
         Key endKey = r.getEndKey();
         if (!startKey.getRowData().equals(endKey.getRowData())) {
             return false;
         }
-        
+
         // Column Family must contain a null byte separator.
         Text startCF = startKey.getColumnFamily();
         Text endCF = endKey.getColumnFamily();
@@ -1365,7 +1293,7 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
         }
         return true;
     }
-    
+
     /**
      * Convert the given key's row &amp; column family to a string.
      *
@@ -1377,35 +1305,36 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
         if (null == k) {
             return "null";
         }
-        
+
         final Text holder = new Text();
         StringBuilder sb = new StringBuilder(40);
-        
+
         k.getRow(holder);
         Key.appendPrintableString(holder.getBytes(), 0, holder.getLength(), org.apache.accumulo.core.Constants.MAX_DATA_TO_PRINT, sb);
         sb.append(Constants.SPACE);
-        
+
         k.getColumnFamily(holder);
         Key.appendPrintableString(holder.getBytes(), 0, holder.getLength(), org.apache.accumulo.core.Constants.MAX_DATA_TO_PRINT, sb);
-        
+
         sb.append(Constants.COLON);
-        
+
         k.getColumnQualifier(holder);
         Key.appendPrintableString(holder.getBytes(), 0, holder.getLength(), org.apache.accumulo.core.Constants.MAX_DATA_TO_PRINT, sb);
-        
+
         return sb.toString();
     }
-    
-    protected NestedIterator<Key> getOrSetKeySource(final Range documentRange, ASTJexlScript rangeScript) throws IOException, ConfigException,
-                    IllegalAccessException, InstantiationException {
+
+    protected NestedIterator<Key> getOrSetKeySource(final Range documentRange, ASTJexlScript rangeScript)
+                    throws IOException, ConfigException, IllegalAccessException, InstantiationException {
         NestedIterator<Key> sourceIter = null;
         // If we're doing field index or a non-fulltable (aka a normal
         // query)
         if (!this.isFullTableScanOnly()) {
-            
-            boolean isQueryFullySatisfiedInitialState = batchedQueries <= 0;
+
+            // we assume the query is satisfiable as an initial state
+            boolean isQueryFullySatisfiedInitialState = true;
             String hitListOptionString = documentOptions.get(QueryOptions.HIT_LIST);
-            
+
             if (hitListOptionString != null) {
                 boolean hitListOption = Boolean.parseBoolean(hitListOptionString);
                 if (hitListOption) {
@@ -1423,43 +1352,43 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
                                                                                                   // in
                                                                                                   // with
                                                                                                   // optimism
-                
+
                 // visit() and get the root which is the root of a tree of
                 // Boolean Logic Iterator<Key>'s
                 rangeScript.jjtAccept(satisfactionVisitor, null);
-                
+
                 isQueryFullySatisfiedInitialState = satisfactionVisitor.isQueryFullySatisfied();
-                
+
             }
-            
+
             IteratorBuildingVisitor visitor = createIteratorBuildingVisitor(documentRange, isQueryFullySatisfiedInitialState, this.sortedUIDs);
-            
+
             // visit() and get the root which is the root of a tree of
             // Boolean Logic Iterator<Key>'s
             rangeScript.jjtAccept(visitor, null);
-            
+
             sourceIter = visitor.root();
-            
+
             if (visitor.isQueryFullySatisfied()) {
                 this.fieldIndexSatisfiesQuery = true;
             }
-            
+
             // Print out the boolean logic tree of iterators
             debugBooleanLogicIterators(sourceIter);
-            
+
             if (sourceIter != null) {
                 sourceIter = new SeekableNestedIterator(sourceIter, this.myEnvironment);
             }
         }
-        
+
         // resort to a full table scan otherwise
         if (sourceIter == null) {
             sourceIter = getEventDataNestedIterator(source);
         }
-        
+
         return sourceIter;
     }
-    
+
     /**
      * Determine whether the query can be completely satisfied by the field index
      *
@@ -1468,27 +1397,28 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
     protected boolean isFieldIndexSatisfyingQuery() {
         return this.fieldIndexSatisfiesQuery;
     }
-    
+
     protected NestedIterator<Key> getEventDataNestedIterator(SortedKeyValueIterator<Key,Value> source) {
         return new EventDataScanNestedIterator(source, getEventEntryKeyDataTypeFilter());
     }
-    
+
     protected IteratorBuildingVisitor createIteratorBuildingVisitor(final Range documentRange, boolean isQueryFullySatisfied, boolean sortedUIDs)
                     throws ConfigException, MalformedURLException, InstantiationException, IllegalAccessException {
         return createIteratorBuildingVisitor(IteratorBuildingVisitor.class, documentRange, isQueryFullySatisfied, sortedUIDs);
     }
-    
+
     protected IteratorBuildingVisitor createIteratorBuildingVisitor(Class<? extends IteratorBuildingVisitor> c, final Range documentRange,
-                    boolean isQueryFullySatisfied, boolean sortedUIDs) throws MalformedURLException, ConfigException, IllegalAccessException,
-                    InstantiationException {
+                    boolean isQueryFullySatisfied, boolean sortedUIDs)
+                    throws MalformedURLException, ConfigException, IllegalAccessException, InstantiationException {
         if (log.isTraceEnabled()) {
             log.trace(documentRange);
         }
-        
+
         // determine the list of indexed fields
         Set<String> indexedFields = this.getIndexedFields();
-        indexedFields.removeAll(this.getNonIndexedDataTypeMap().keySet());
-        
+        Set<String> nonIndexedFields = this.getNonIndexedDataTypeMap().keySet();
+        indexedFields.removeAll(nonIndexedFields);
+
         // @formatter:off
         return c.newInstance()
                 .setSource(this, this.myEnvironment)
@@ -1516,6 +1446,7 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
                 .setIvaratorSourcePool(createIvaratorSourcePool(this.maxIvaratorSources))
                 .setMaxIvaratorResults(this.getMaxIvaratorResults())
                 .setIncludes(indexedFields)
+                .setUnindexedFields(nonIndexedFields)
                 .setTermFrequencyFields(this.getTermFrequencyFields())
                 .setIsQueryFullySatisfied(isQueryFullySatisfied)
                 .setSortedUIDs(sortedUIDs)
@@ -1534,11 +1465,11 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
         // @formatter:on
         // TODO: .setStatsPort(this.statsdHostAndPort);
     }
-    
+
     protected GenericObjectPool<SortedKeyValueIterator<Key,Value>> createIvaratorSourcePool(int maxIvaratorSources) {
         return new GenericObjectPool<>(createIvaratorSourceFactory(this), createIvaratorSourcePoolConfig(maxIvaratorSources));
     }
-    
+
     private BasePoolableObjectFactory<SortedKeyValueIterator<Key,Value>> createIvaratorSourceFactory(SourceFactory<Key,Value> sourceFactory) {
         return new BasePoolableObjectFactory<SortedKeyValueIterator<Key,Value>>() {
             @Override
@@ -1547,7 +1478,7 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
             }
         };
     }
-    
+
     private GenericObjectPool.Config createIvaratorSourcePoolConfig(int maxIvaratorSources) {
         GenericObjectPool.Config poolConfig = new GenericObjectPool.Config();
         poolConfig.maxActive = maxIvaratorSources;
@@ -1556,7 +1487,7 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
         poolConfig.whenExhaustedAction = WHEN_EXHAUSTED_BLOCK;
         return poolConfig;
     }
-    
+
     protected String getHdfsCacheSubDirPrefix() {
         // if we have a document specific range, or a list of specific doc ids (bundled document specific range per-se), then
         // we could have multiple iterators running against this shard for this query at the same time.
@@ -1565,37 +1496,28 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
         String hdfsPrefix = null;
         if (isDocumentSpecificRange(this.range)) {
             hdfsPrefix = range.getStartKey().getColumnFamily().toString().replace('\0', '_');
-        } else if (batchedQueries > 0) {
-            StringBuilder sb = new StringBuilder();
-            for (Entry<Range,String> queries : batchStack) {
-                if (sb.length() > 0) {
-                    sb.append('-');
-                }
-                sb.append(queries.getKey().getStartKey().getColumnFamily().toString().replace('\0', '_'));
-            }
-            hdfsPrefix = sb.toString();
         }
         return hdfsPrefix;
     }
-    
+
     protected SatisfactionVisitor createSatisfiabilityVisitor(boolean isQueryFullySatisfiedInitialState) {
-        
+
         // determine the list of indexed fields
         Set<String> indexedFields = this.getIndexedFields();
-        
+
         indexedFields.removeAll(this.getNonIndexedDataTypeMap().keySet());
-        
+
         return new SatisfactionVisitor(getNonEventFields(), indexedFields, Collections.emptySet(), isQueryFullySatisfiedInitialState);
     }
-    
+
     public void setQuery(String query) {
         this.query = query;
     }
-    
+
     public String getQuery() {
         return query;
     }
-    
+
     /**
      * A comparator which will ensure that values with a grouping context are sorted first. This allows us to not use exhaustive matching within the jexl
      * context to determine whether the document of interest is actually a match. Matching on the grouping context one (from the Event, not from the field
@@ -1603,11 +1525,11 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
      */
     private static class ValueComparator implements Comparator<Object> {
         final Text fi;
-        
+
         public ValueComparator(Key metadata) {
             fi = (metadata == null ? new Text() : metadata.getColumnFamily());
         }
-        
+
         @Override
         public int compare(Object o1, Object o2) {
             if (fi.getLength() == 0) {
@@ -1625,11 +1547,11 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
             }
         }
     }
-    
+
     /**
      * This can be overridden to supply a value comparator for use within the jexl context. Useful when using the HitListArithmetic which pulls back which value
      * tuples were actually hit upon.
-     * 
+     *
      * @param from
      *            the from tuple
      * @return A comparator for values within the jexl context.
@@ -1638,7 +1560,7 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
     public Comparator<Object> getValueComparator(Tuple3<Key,Document,Map<String,Object>> from) {
         return new ValueComparator(from.second().getMetadata());
     }
-    
+
     protected UniqueTransform getUniqueTransform() {
         if (uniqueTransform == null && getUniqueFields() != null && !getUniqueFields().isEmpty()) {
             synchronized (getUniqueFields()) {
@@ -1649,7 +1571,7 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
         }
         return uniqueTransform;
     }
-    
+
     protected GroupingIterator getGroupingIteratorInstance(Iterator<Entry<Key,Document>> in) {
         if (groupingIterator == null && getGroupFields() != null && !getGroupFields().isEmpty()) {
             synchronized (getGroupFields()) {
@@ -1661,14 +1583,14 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
         }
         return groupingIterator;
     }
-    
+
     protected ActiveQueryLog getActiveQueryLog() {
         if (this.activeQueryLog == null) {
             this.activeQueryLog = ActiveQueryLog.getInstance(getActiveQueryLogName());
         }
         return this.activeQueryLog;
     }
-    
+
     /**
      * Gets a default implementation of a FieldIndexAggregator
      *
@@ -1681,14 +1603,14 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
         }
         return fiAggregator;
     }
-    
+
     protected ExcerptTransform getExcerptTransform() {
         if (excerptTransform == null && getExcerptFields() != null && !getExcerptFields().isEmpty()) {
             synchronized (getExcerptFields()) {
                 if (excerptTransform == null) {
                     try {
                         excerptTransform = new ExcerptTransform(excerptFields, myEnvironment, sourceForDeepCopies.deepCopy(myEnvironment),
-                                        excerptIterator.newInstance());
+                                        excerptIterator.getDeclaredConstructor().newInstance());
                     } catch (Exception e) {
                         throw new RuntimeException("Could not create excerpt transform", e);
                     }
@@ -1697,7 +1619,7 @@ public class QueryIterator extends QueryOptions implements YieldingKeyValueItera
         }
         return excerptTransform;
     }
-    
+
     /**
      * Get a default implementation of a {@link RangeProvider}
      *
